fix: 🐛 improve bg image stretching

--- a/src/components/pages/top/Introduction/index.module.scss
+++ b/src/components/pages/top/Introduction/index.module.scss
@@ -1,5 +1,8 @@
 @use '@/styles/common' as *;
 
+.main {
+    width: 100%;
+}
 .intro {
     display: flex;
     justify-content: center;
